--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bfcbbbd
+	base = b7424ae
 	trimbase = 
 	parent = release/hydro/imu_pipeline
-	previous = 
+	previous = bfcbbbd
