--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e13b5ef
+	base = 76e008a
 	trimbase = 
 	parent = debian/hydro/imu_pipeline
-	previous = 
+	previous = e13b5ef
