--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <package>
   <name>imu_pipeline</name>
-  <version>0.1.1</version>
+  <version>0.1.2</version>
   <description>imu_pipeline</description>
-  <maintainer email="chadrockey@willowgarage.com">Chad Rockey</maintainer>
+  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>
 
   <license>BSD</license>
 
