--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1": ["Chad Rockey", "chadrockey@willowgarage.com"]}
+{"0.1.1": ["Chad Rockey", "chadrockey@willowgarage.com"], "0.1.2": ["Chad Rockey", "chadrockey@gmail.com"]}
