--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9581e3e
+	base = b991fc7
 	trimbase = 
 	parent = release/indigo/imu_pipeline
-	previous = 
+	previous = 9581e3e
