--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 17cd874
+	base = 7fea4a9
 	trimbase = 
 	parent = debian/indigo/imu_pipeline
-	previous = 
+	previous = 17cd874
