--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d11b9d6
+	base = 97369b0
 	trimbase = 
 	parent = release/indigo/imu_pipeline
-	previous = 
+	previous = d11b9d6
