--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db639ef
+	base = 8009f5a
 	trimbase = 
 	parent = rpm/indigo/imu_pipeline
-	previous = 
+	previous = db639ef
